# QR-Code-File-Transfer-CLI

./: README.md  test.txt
qrt/: Cargo.toml
qrt/src/: main.rs
